--- a/src/components/headers/TimeLine.css
+++ b/src/components/headers/TimeLine.css
@@ -1,7 +1,4 @@
 
-html {
-    scroll-behavior: smooth;
-}
 
 /* common styles */
 
@@ -507,7 +504,7 @@ p {
     color: #fff;
 }
 
-/* .establish-projects > img {
+.establish-projects > img {
     position: absolute;
     left: 70%;
     top: 50%;
@@ -515,16 +512,7 @@ p {
     opacity: 0;
     transition: all 0.5s ease-in-out;
     line-height: 0;
-} */
-
-/* Set the width for all images inside the .establish-project */
-.establish-project img {
-    width: 10px; /* Adjust percentage as needed */
-    height: 10px; /* Ensure aspect ratio is maintained */
-    object-fit: cover;
-    margin: 0 auto; /* Center the image horizontally */
-  }
-  
+}
 
 .establish-projects:hover > img {
     opacity: 1;
@@ -537,18 +525,18 @@ p {
 
 /* founder section */
 
- /* .founder-container {
+/* .founder-container {
     width: 100%;
     position: relative;
     background-color: #081427;
     display: flex;
     align-items: center;
-    
+
     background-image: url('../assets/images/home/outline_building.webp');
     background-position: 103% bottom;
     background-size: 52%;
     background-repeat: no-repeat;
-}  */
+} */
 
 .founder-container .custom-container{
     display: flex;
@@ -1177,8 +1165,8 @@ textarea{
 }
 
 /* epc & realty projects */
-
-/* .epc-body {
+/* 
+.epc-body {
     background-image: url('../assets/images/home/visionbg.webp');
     background-position: center;
     background-size: cover;
@@ -2289,7 +2277,4 @@ textarea{
         width: 100%;
     }
 }
-  
-
-
   
