--- a/src/components/cards/TabGrid.css
+++ b/src/components/cards/TabGrid.css
@@ -107,6 +107,7 @@ h5 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+    color:black;
     unicode-bidi: isolate;
 }
 
