--- a/src/components/headers/Founder.css
+++ b/src/components/headers/Founder.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center; /* Center vertically */
     justify-content: center; /* Center horizontally */
-    background-color: #00354f; /* Background color */
+    background-color: whitesmoke; /* Background color */
 }
 .container {
     margin-left: 90px; /* Adjust as needed */
