--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 /* globalStyles.css */
 body {
-    background-color: #00354f !important;
+    background-color: white !important;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif; /* Optional: Set your preferred font */
